nucleo-picker-vt/tests/scenarios/snapshots/scenarios__picker_options__basic_options@custom-options.snap
---
source: nucleo-picker-vt/tests/scenarios/picker_options.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: custom-options
  name_expression: "\"custom-options\""
  sequence: 0
---
version: 1
size:
  cols: 60
  rows: 16
screen: alternate
cursor:
  position:
    x: 8
    y: 0
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "> item-1                                                    "
  - "  12/24 (0/2) ──────────────────────────────────────────────"
  - "▌ item-21 victor                                            "
  - "  item-19 tango                                             "
  - "  item-18 sierra                                            "
  - "  item-17 romeo                                             "
  - "  item-16 quebec                                            "
  - "  item-15 papa                                              "
  - "  item-14 oscar                                             "
  - "  item-13 november                                          "
  - "  item-12 mike                                              "
  - "  item-11 lima                                              "
  - "  item-10 kilo                                              "
  - "  item-01 bravo                                             "
  - "                                                            "
  - "                                                            "
styles:
  - row: 1
    start: 0
    end: 7
    foreground: "#b9ca4a"
    italic: true
  - row: 1
    start: 7
    end: 60
    foreground: "#c5c8c6"
    italic: true
  - row: 2
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 2
    start: 1
    end: 2
    background: "#666666"
    bold: true
  - row: 2
    start: 2
    end: 7
    foreground: "#70c0b1"
    background: "#666666"
    bold: true
  - row: 2
    start: 7
    end: 8
    background: "#666666"
    bold: true
  - row: 2
    start: 8
    end: 9
    foreground: "#70c0b1"
    background: "#666666"
    bold: true
  - row: 2
    start: 9
    end: 16
    background: "#666666"
    bold: true
  - row: 3
    start: 2
    end: 8
    foreground: "#70c0b1"
  - row: 4
    start: 2
    end: 8
    foreground: "#70c0b1"
  - row: 5
    start: 2
    end: 8
    foreground: "#70c0b1"
  - row: 6
    start: 2
    end: 8
    foreground: "#70c0b1"
  - row: 7
    start: 2
    end: 8
    foreground: "#70c0b1"
  - row: 8
    start: 2
    end: 8
    foreground: "#70c0b1"
  - row: 9
    start: 2
    end: 8
    foreground: "#70c0b1"
  - row: 10
    start: 2
    end: 8
    foreground: "#70c0b1"
  - row: 11
    start: 2
    end: 8
    foreground: "#70c0b1"
  - row: 12
    start: 2
    end: 8
    foreground: "#70c0b1"
  - row: 13
    start: 2
    end: 7
    foreground: "#70c0b1"
  - row: 13
    start: 8
    end: 9
    foreground: "#70c0b1"
