nucleo-picker-vt/tests/scenarios/snapshots/scenarios__picker_options__basic_options@highlight-padding.snap
---
source: nucleo-picker-vt/tests/scenarios/picker_options.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: highlight-padding
  name_expression: "\"highlight-padding\""
  sequence: 2
---
version: 1
size:
  cols: 12
  rows: 8
screen: alternate
cursor:
  position:
    x: 8
    y: 0
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "> victor    "
  - "  1/24 (0/2)"
  - "▌ …victor   "
  - "            "
  - "            "
  - "            "
  - "            "
  - "            "
styles:
  - row: 1
    start: 0
    end: 6
    foreground: "#b9ca4a"
    italic: true
  - row: 1
    start: 6
    end: 12
    foreground: "#c5c8c6"
    italic: true
  - row: 2
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 2
    start: 1
    end: 3
    background: "#666666"
    bold: true
  - row: 2
    start: 3
    end: 9
    foreground: "#70c0b1"
    background: "#666666"
    bold: true
