nucleo-picker-vt/tests/scenarios/snapshots/scenarios__picker_options__basic_options@scroll-padding-after-scroll.snap
---
source: nucleo-picker-vt/tests/scenarios/picker_options.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: scroll-padding-after-scroll
  name_expression: "\"scroll-padding-after-scroll\""
  sequence: 4
---
version: 1
size:
  cols: 24
  rows: 8
screen: alternate
cursor:
  position:
    x: 2
    y: 0
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - ">                       "
  - "  24/24 (0/2) ──────────"
  - "  item-23 xray          "
  - "  item-22 whiskey       "
  - "  item-21 victor        "
  - "▌ item-20 uniform       "
  - "  item-19 tango         "
  - "  item-18 sierra        "
styles:
  - row: 1
    start: 0
    end: 7
    foreground: "#b9ca4a"
    italic: true
  - row: 1
    start: 7
    end: 24
    foreground: "#c5c8c6"
    italic: true
  - row: 5
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 5
    start: 1
    end: 17
    background: "#666666"
    bold: true
